# cpp2python

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compiler
.github/workflows/: main.yml
src/: cpp2py.cpp  cpp2py.py
